# CXEngine

./: .gitignore  .gitmodules  CMakeLists.txt  arkit_server.bat  arkit_server_dist.sh  dist.sh  example.sh  face_export.bat  face_export_dist.sh  launcher.sh  readme.md  start_client.sh  start_server.sh
client/: CMakeLists.txt
client/src/: Bitmap.h  CubeBatch.cpp  CubeBatch.h  Engine.cpp  Engine.h  Entity.h  GMath.cpp  GMath.h  Game.cpp  InputManager.cpp  Logger.cpp  Logger.h  Message.cpp  Message.h  ResourceManager.cpp  ResourceManager.h  Singleton.h  SpriteBatch.cpp  SpriteRenderer.cpp  SpriteRenderer.h  State.h  TextRenderer.cpp  TextRenderer.h  TextureManager.cpp  Window.cpp  Window.h  camera.h  cube_batch.h  cximgui.cpp  cximgui_enums.inl  debugger.cpp  debugger.h  defines.h  engine.cpp  engine.h  entity.h  file_loading.cpp  file_loading.h  file_system.cpp  file_system.h  (+41 more)
client/src/actor/: Actor.cpp  Actor.h  ActorManager.cpp  Player.cpp  Player.h  PlayerState.cpp  PlayerState.h  action.cpp  action.h  actor.cpp  actor.h  actor_manager.cpp  actor_manager.h  move.cpp  player.cpp  player.h  player_state.cpp  player_state.h
client/src/animation/: FrameAnimation.cpp  FrameAnimation.h  animation_database.h  frame_animation.cpp  frame_animation.h  sprite.cpp  sprite.h
client/src/astar/: Astar.h  astar.cpp
client/src/audio/: audio_manager.cpp  audio_manager.h
client/src/combat/: Combat.cpp  Combat.h  Skill.h  combat.cpp  skill.cpp  skill.h
client/src/components/: base_component.h  transform_component.cpp
client/src/core/: Graphics2D.cpp  Graphics2D.h  Object2D.cpp  Object2D.h  Renderer.h  Shader.h  Texture.h  Transform.h  graphics_2d.cpp  renderer.h  shader.cpp  texture.cpp
client/src/event/: event.h
client/src/graphics/: bitmap.cpp  bitmap.h  graphics_2d.cpp  renderer.cpp  renderer.h  texture.cpp  ui_renderer.cpp  ui_renderer.h
client/src/kbase/: basic_types.h  error_exception_util.h  scope_guard.h  string_format.cpp  string_util.cpp
client/src/math/: vector.h
client/src/objects/: Object.cpp  map_object.cpp  object.cpp  object.h  object.inl
client/src/pch/: precompile.h
client/src/scene/: BaseScene.cpp  BaseScene.h  GameMap.cpp  GameMap.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SplashScene.cpp  SplashScene.h  UIScene.cpp  UIScene.h  WASViewerScene.cpp  WASViewerScene.h  base_scene.cpp  base_scene.h  game_map.cpp  game_map.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  splash_scene.h  ui_scene.cpp  ui_scene.h  was_viewer_scene.cpp  was_viewer_scene.h
client/src/time/: Time.h  TimerManager.cpp  TimerManager.h  timer.h  timer_manager.cpp  timer_manager.h
client/src2/: algorithm.cpp  cube_batch.cpp  entity.h  file_system.cpp  file_system.h  game.h  input_manager.cpp  input_manager.h  resource_manager.cpp  script_system.cpp  script_system.h  sprite_renderer.cpp  test_scene.cpp  test_scene.h  text_renderer.h  texture_manager.cpp  vertex.h
client/src2/actor/: actor.h  actor_manager.h  player.cpp  player_state.h
client/src2/animation/: animation_database.h
client/src2/astar/: heap.h
client/src2/combat/: combat.h
client/src2/components/: base_component.cpp  transform_component.h
client/src2/core/: object_2d.h  texture.h
client/src2/scene/: base_scene.h  scene.h  scene_manager.cpp  splash_scene.cpp  splash_scene.h  was_viewer_scene.h
common/: CMakeLists.txt
common/src/: file_system.cpp  file_system.h  logger.cpp  logger.h  protocol.cpp  protocol.h  script_system.cpp  script_system.h  script_system.inl
cxluax/: CMakeLists.txt
cxluax/src/: main.cpp  script_system.cpp  script_system.h  window.cpp  window.h
debugger/: .gitignore  CMakeLists.txt  package.json
debugger/embed/: CMakeLists.txt
debugger/embed/src/: debugger.cpp  debugger.h
debugger/luadbg/: CMakeLists.txt
debugger/luadbg/include/: debugger.inl
debugger/luadbg/src/: debugger.cpp
debugger/scripts/: common.lua  main.lua
debugger/src/: debugger_adapter.cpp  debugger_core.cpp  defines.h  lua_net.cpp  lua_net.h  net_thread_queue.cpp  net_thread_queue.h  script_system.h
debugger/test/: main.lua
debugger/test/src/: main.cpp
debugger/vscode/: CMakeLists.txt  main.lua  package.json  threads.lua  utils.lua
debugger/vscode/src/: debugger_adapter.cpp  debugger_adapter.h  debugger_core.h  defines.h  main.cpp  script_system.cpp  vsdbgadapter.inl
doc/: lua二次开发指南.md  roadmap.md
face_export/: launcher.bat
internals/: CMakeLists.txt
res/: combat.md  equip.tsv  readme.md
res/doc/: combat.md  readme.md  roadmap.md  server.md
res/storage/: account.data  actor.data  player.data  summon.data
res/tables/: actor_template.tsv  attack.tsv  avatar_90_weapon.tsv  avatar_bb.1.tsv  avatar_bb.tsv  avatar_npc.1.tsv  avatar_npc.tsv  avatar_pet.tsv  avatar_role.1.tsv  avatar_role.tsv  avatar_scene_npc.tsv  avatar_summon.tsv  battle_map.tsv  (+25 more)
server/: CMakeLists.txt  cp_src2.sh
server/scripts/: debugger.lua
server/src/: GMath.h  Game.cpp  Game.h  Logger.cpp  Logger.h  Random.cpp  debugger.cpp  debugger.h  defines.h  entity.h  file_loading.h  file_system.cpp  file_system.h  game.cpp  game.h  game2.cpp  logger.cpp  logger.h  lua_bind.h  main.cpp  resource_manager.cpp  resource_manager.h  script_system.cpp  script_system.h  server.cpp  server.h  texture_manager.h  tsv.cpp  tsv.h  window.cpp  window.h
server/src/actor/: action.h  actor.cpp  actor.h  player.cpp  player.h  player_state.cpp  player_state.h
server/src/animation/: frame_animation.cpp  frame_animation.h
server/src/astar/: Astar.cpp  Astar.h
server/src/combat/: combat.cpp  combat.h  skill.cpp  skill.h
server/src/graphics/: graphics_2d.h  object_2d.cpp  texture.cpp
server/src/imgui/: cximgui.cpp  cximgui_enums.inl
server/src/kbase/: error_exception_util.cpp  string_util.h
server/src/pch/: precompile.h
server/src/scene/: BaseScene.cpp  BaseScene.h  GameMap.cpp  GameMap.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  base_scene.cpp  base_scene.h  game_map.cpp  game_map.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
server/src/time/: timer.cpp  timer_manager.cpp
(+127 files in other folders)
